slow scroll refactored to class

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -244,11 +244,11 @@
       </div>
     </section>
 
-    <script src="../scripts/animations.js"></script>
-    <script src="../scripts/index.js"></script>
-    <script src="../scripts/modal.js"></script>
-    <script src="../scripts/tooltip.js"></script>
-    <script src="../scripts/dropdown.js"></script>
-    <script src="../scripts/fetch.js"></script>
+    <script src="../scripts/modules/animations.js"></script>
+    <script type="module" src="../scripts/index.js"></script>
+    <script src="../scripts/modules/modal.js"></script>
+    <script src="../scripts/modules/tooltip.js"></script>
+    <script src="../scripts/modules/dropdown.js"></script>
+    <script src="../scripts/modules/fetch.js"></script>
   </body>
 </html>
