numbersanimations refatored to class

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -249,6 +249,6 @@
     <script src="../scripts/modules/modal.js"></script>
     <script src="../scripts/modules/tooltip.js"></script>
     <script src="../scripts/modules/dropdown.js"></script>
-    <script src="../scripts/modules/fetch.js"></script>
+    <script type="module" src="../scripts/modules/fetch.js"></script>
   </body>
 </html>
