--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -201,6 +201,27 @@
         </dl>
       </section>
 
+      <section class="grid-section pictures" data-anime="scroll">
+        <ul class="custom-controls">
+          <li><img src="../../public/slides/foto1-thumb.jpg" alt="" /></li>
+          <li><img src="../../public/slides/foto2-thumb.jpg" alt="" /></li>
+          <li><img src="../../public/slides/foto3-thumb.jpg" alt="" /></li>
+          <li><img src="../../public/slides/foto4-thumb.jpg" alt="" /></li>
+          <li><img src="../../public/slides/foto5-thumb.jpg" alt="" /></li>
+          <li><img src="../../public/slides/foto6-thumb.jpg" alt="" /></li>
+        </ul>
+        <div class="content">
+          <ul class="slide">
+            <li><img src="../../public/slides/foto1.jpg" alt="" /></li>
+            <li><img src="../../public/slides/foto2.jpg" alt="" /></li>
+            <li><img src="../../public/slides/foto3.jpg" alt="" /></li>
+            <li><img src="../../public/slides/foto4.jpg" alt="" /></li>
+            <li><img src="../../public/slides/foto5.jpg" alt="" /></li>
+            <li><img src="../../public/slides/foto6.jpg" alt="" /></li>
+          </ul>
+        </div>
+      </section>
+
       <section class="grid-section numbers" data-anime="scroll">
         <h1 class="title">Números</h1>
         <div class="numbers-grid"></div>
