--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,7 +29,11 @@
           </li>
           <li><a href="#faq">Faq</a></li>
           <li><a href="#contato">Contato</a></li>
-          <li><a data-modal="open" href="login.html">Login →</a></li>
+          <li>
+            <a data-modal="open" href="login.html"
+              >Login <span class="arrow-black"></span
+            ></a>
+          </li>
         </ul>
       </nav>
       <section class="grid-section animais" data-anime="scroll" id="animais">
@@ -254,7 +258,7 @@
 
     <section class="modal-container" data-modal="container">
       <div class="modal">
-        <button class="close" data-modal="close">X</button>
+        <button class="close" data-modal="close"></button>
         <form action="">
           <label for="email">Email</label>
           <input type="text" for="email" id="email" />
